Started add content, bug with vertical alignment

--- a/css/layouts.css
+++ b/css/layouts.css
@@ -12,7 +12,28 @@
   background-color: #FFF;
 }
 
+.reveal section img {
+  margin: 15px 0px;
+  background: rgba(255, 255, 255, 0.12);
+  border: 4px solid #222;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
+}
+
 .reveal section img.plain {
+    border: 0;
+    box-shadow: none;
+    background: rgba(0,0,0,0);
+}
+
+.reveal section video {
+  margin: 15px 0px;
+  background: rgba(255, 255, 255, 0.12);
+  border: 4px solid #222;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
+  object-fit: inherit;
+}
+
+.reveal section video.plain {
     border: 0;
     box-shadow: none;
     background: rgba(0,0,0,0);
@@ -65,6 +86,7 @@
     display: grid;
     grid-template-columns: auto;
     grid-template-rows: auto;
+    align-content: center;
 }
 
 .reveal .slides section .content div {
@@ -72,6 +94,9 @@
     grid-row:1;
 }
 
+.reveal .slides section .content div ul li {
+    padding-bottom: 15px;
+}
 
 
 
